package br.edu.ifrs.poa.hrm_service.core.execution;

public class Instance {
}
