package br.edu.ifrs.poa.hrm_service.core.institutional;

public class Student {
}
